Add(AddDeviceDatePicker.kt,DisposedDeviceDatePicker.kt) Done(CategoryActivity.kt,MainActivity.kt) Edit(CDDBAdapter.kt,DDDBAdapter.kt)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="tv_staff06">更新者：</string>
     <string name="bt_dispose06">廃棄する</string>
 
+    <!--date format-->
+    <string name="date_format">%d/%02d/%02d</string>
+
 </resources>
